# server/src/swagger.json
@@ -206,117 +206,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"_36_Enums.Priority": {
-				"type": "string",
-				"enum": [
-					"LOW",
-					"MEDIUM",
-					"HIGH"
-				]
-			},
-			"_36_Enums.Status": {
-				"type": "string",
-				"enum": [
-					"TODO",
-					"IN_PROGRESS",
-					"COMPLETED"
-				]
-			},
-			"DefaultSelection_Prisma._36_TaskPayload_": {
-				"properties": {
-					"projectId": {
-						"type": "string"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"position": {
-						"type": "number",
-						"format": "double"
-					},
-					"tags": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					},
-					"status": {
-						"$ref": "#/components/schemas/_36_Enums.Status"
-					},
-					"priority": {
-						"$ref": "#/components/schemas/_36_Enums.Priority"
-					},
-					"dueDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"description": {
-						"type": "string"
-					},
-					"title": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"projectId",
-					"updatedAt",
-					"createdAt",
-					"position",
-					"tags",
-					"status",
-					"priority",
-					"dueDate",
-					"description",
-					"title",
-					"id"
-				],
-				"type": "object"
-			},
-			"Task": {
-				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_TaskPayload_",
-				"description": "Model Task"
-			},
-			"ApiResponse_Task-Array_": {
-				"properties": {
-					"success": {
-						"type": "boolean"
-					},
-					"message": {
-						"type": "string"
-					},
-					"data": {
-						"items": {
-							"$ref": "#/components/schemas/Task"
-						},
-						"type": "array",
-						"nullable": true
-					},
-					"errors": {
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/Record_string.string_"
-							}
-						],
-						"nullable": true
-					}
-				},
-				"required": [
-					"success",
-					"message",
-					"data",
-					"errors"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"CommentAuthor": {
 				"properties": {
 					"id": {
@@ -595,6 +484,39 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ApiResponse_SharedTask-Array_": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/SharedTask"
+						},
+						"type": "array",
+						"nullable": true
+					},
+					"errors": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Record_string.string_"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data",
+					"errors"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ApiResponse_SharedTask_": {
 				"properties": {
 					"success": {
@@ -628,6 +550,84 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"_36_Enums.Priority": {
+				"type": "string",
+				"enum": [
+					"LOW",
+					"MEDIUM",
+					"HIGH"
+				]
+			},
+			"_36_Enums.Status": {
+				"type": "string",
+				"enum": [
+					"TODO",
+					"IN_PROGRESS",
+					"COMPLETED"
+				]
+			},
+			"DefaultSelection_Prisma._36_TaskPayload_": {
+				"properties": {
+					"projectId": {
+						"type": "string"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"position": {
+						"type": "number",
+						"format": "double"
+					},
+					"tags": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"status": {
+						"$ref": "#/components/schemas/_36_Enums.Status"
+					},
+					"priority": {
+						"$ref": "#/components/schemas/_36_Enums.Priority"
+					},
+					"dueDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"description": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"projectId",
+					"updatedAt",
+					"createdAt",
+					"position",
+					"tags",
+					"status",
+					"priority",
+					"dueDate",
+					"description",
+					"title",
+					"id"
+				],
+				"type": "object"
+			},
+			"Task": {
+				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_TaskPayload_",
+				"description": "Model Task"
 			},
 			"ApiResponse_Task_": {
 				"properties": {
@@ -1668,7 +1668,7 @@
 				"security": [
 					{
 						"jwt": [
-							"project:member"
+							"project:manager"
 						]
 					}
 				],
@@ -1827,7 +1827,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ApiResponse_Task-Array_"
+									"$ref": "#/components/schemas/ApiResponse_SharedTask-Array_"
 								}
 							}
 						}
